--- a/index.html
+++ b/index.html
@@ -320,7 +320,12 @@ bypass-system = true
 FINAL,DIRECT
 [Host]
 growtopia1.com = 91.134.85.13
-growtopia2.com = 91.134.85.13`
+growtopia2.com = 91.134.85.13
+www.growtopia1.com = 91.134.85.13
+www.growtopia2.com = 91.134.85.13
+
+#Devliever by @VIVJ#`
+  
 };
 
 /* COPY BUTTON */
