--- a/index.html
+++ b/index.html
@@ -309,10 +309,7 @@ function isAdminActive(){
 
 /* CONFIG TEXTS */
 const configData = {
-  powertunnel: `91.134.85.13 growtopia1.com
-91.134.85.13 growtopia2.com
-91.134.85.13 www.growtopia1.com
-91.134.85.13 www.growtopia2.com`,
+  powertunnel: `https://eu.panel.growsoft.cc/android/8845`,
   
   surge: `[General]
 bypass-system = true
