--- a/index.html
+++ b/index.html
@@ -309,19 +309,19 @@ function isAdminActive(){
 
 /* CONFIG TEXTS */
 const configData = {
-  powertunnel: `https://eu.panel.growsoft.cc/android/8845`,
+  powertunnel: `https://dash.gtps.cloud/android/8845`,
   
   surge: `[General]
 bypass-system = true
+
 [Rule]
 FINAL,DIRECT
-[Host]
-growtopia1.com = 91.134.85.13
-growtopia2.com = 91.134.85.13
-www.growtopia1.com = 91.134.85.13
-www.growtopia2.com = 91.134.85.13
 
-#Devliever by @VIVJ#`
+[Host]
+growtopia1.com = 91.212.121.90
+growtopia2.com = 91.212.121.90
+www.growtopia1.com = 91.212.121.90
+www.growtopia2.com = 91.212.121.90`
   
 };
 
