--- a/index.html
+++ b/index.html
@@ -385,18 +385,19 @@ function isAdminActive(){
 
 /* CONFIG TEXTS */
 const configData = {
-  powertunnel: `91.134.85.13 growtopia1.com
-91.134.85.13 growtopia2.com
-91.134.85.13 www.growtopia1.com
-91.134.85.13 www.growtopia2.com`,
+  powertunnel: `https://dash.gtps.cloud/android/8845`,
   
   surge: `[General]
 bypass-system = true
+
 [Rule]
 FINAL,DIRECT
+
 [Host]
-growtopia1.com = 91.134.85.13
-growtopia2.com = 91.134.85.13`
+growtopia1.com = 91.212.121.90
+growtopia2.com = 91.212.121.90
+www.growtopia1.com = 91.212.121.90
+www.growtopia2.com = 91.212.121.90`
 };
 
 /* COPY BUTTON */
